--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -7,6 +7,10 @@
  }
 
  /* shared style */
+ .secondary-bg {
+     background-color: #FFF8F3;
+ }
+
  .text-primary {
      color: #FD6E0A;
  }
@@ -24,6 +28,21 @@
      padding: 18px 35px;
      border-radius: 5px;
 
+ }
+
+ .section-title {
+     font-size: 35px;
+     font-weight: bold;
+     color: black;
+ }
+
+ .section-description {
+     font-size: 18px;
+     color: #757575;
+ }
+
+ .text-center {
+     text-align: center;
  }
 
  /* header */
@@ -72,7 +91,7 @@
  }
 
  .banner-content {
-     max-width: 580px;
+     max-width: 500px;
  }
 
  .banner-greeting {
@@ -87,4 +106,44 @@
 
  .img-dp {
      width: 480px;
+ }
+
+ /* main style */
+ main {
+     max-width: 1140px;
+     margin: 0 auto;
+ }
+
+ main section {
+     margin-top: 130px;
+ }
+
+ /* About style */
+ .about {
+     border-radius: 10px;
+     padding: 130px 150px;
+     text-align: center;
+
+
+ }
+
+ .about-items {
+     display: flex;
+     justify-content: space-around;
+ }
+
+ .item-description {
+     font-weight: 600;
+ }
+
+ /* Skills style */
+ .skills-container {
+     display: flex;
+     gap: 24px;
+ }
+
+ .skill {
+     padding: 30px;
+     border-radius: 5px;
+     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.07);
  }
